# rust_game_center

./: .gitignore  README.md
docs/: api_reference.md  development_setup.md  game_engine_features.md  testing_strategy.md  troubleshooting.md  ゲーム開発者向けガイドライン.md  設計書.md
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte
game-engine/: Cargo.toml
game-engine/src/: main.rs
game-engine/src/game_api/: mod.rs
game-engine/src/realtime/: mod.rs
game-engine/src/room/: mod.rs
game-engine/src/websocket/: mod.rs
games/quiz/: app.py
