[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde_with = "3.4"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

dashmap = "5.5"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }